# qingmo-tauri

./: .gitignore  README.md  SHA256SUMS.txt  轻墨2.0版本说明.md
qingmo-tauri-2.0-source/: package-lock.json  package.json
qingmo-tauri-2.0-source/src/: index.html
qingmo-tauri-2.0-source/src-tauri/: Cargo.toml  tauri.conf.json
qingmo-tauri-2.0-source/src-tauri/capabilities/: default.json
qingmo-tauri-2.0-source/src-tauri/icons/: icon.icns
qingmo-tauri-2.0-source/src-tauri/src/: lib.rs
src/: index.html  manifest.json
src-tauri/: tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
